[metadata]
name = py-flask-hello
version = 0.0.1
description = A simple python flask hello world
author = Aaron Sykes
author-email = aaron@aaronsykes.com
license = MIT
classifiers =
    Framework :: Flask
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    py_flask_hello

[test]
test-suite = tests

[pep8]
ignore = E701
max-line-length = 88

[flake8]
max-line-length = 8
